feat: setup button component

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -1,5 +1,16 @@
 :root {
+  --spacing-xs: 0.625rem;
+  --spacing-sm: 0.75rem;
+  --spacing-md: 1rem;
+  --spacing-lg: 1.25rem;
+  --spacing-xl: 2rem;
+}
+
+:root {
   --background-color: #eeeeee;
+
   --text-color: #222831;
+  --light-text-color: #eeeeee;
+
   --primary-color: #3fc1c9;
 }
