--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "./normalize.scss";
 @import "./fonts.scss";
 @import "./themes.scss";
 
@@ -5,4 +6,5 @@ body {
   font-family: Jost;
   background-color: var(--background-color);
   color: var(--text-color);
+  font-size: 16px;
 }
