--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,7 +1,7 @@
 @mixin font($family, $file, $weight) {
   @font-face {
     font-family: $family;
-    src: url("../assets/fonts/" + $file + ".woff2") format("woff2");
+    src: url("~assets/fonts/" + $file + ".woff2") format("woff2");
     font-weight: $weight;
   }
 }
