feat: dynamic scaling

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,7 +1,7 @@
 @mixin focus {
   &:focus-visible {
-    outline: 0.125rem solid var(--focus-color);
-    outline-offset: 0.125rem;
+    outline: calc(0.125rem * var(--scale)) solid var(--focus-color);
+    outline-offset: calc(0.125rem * var(--scale));
   }
 }
 
