--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,23 @@
 @import "./fonts.scss";
 @import "./themes.scss";
 
+html * {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 body {
   font-family: Jost;
   background-color: var(--background-color);
   color: var(--text-color);
-  font-size: calc(16px * var(--scale));
+  font-size: 16px;
 }
