chore: setup play

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -16,6 +16,7 @@
 
   --text-color: #222831;
   --light-text-color: #eeeeee;
+  --dimmed-color: #838fa3;
 
   --primary-color: #3fc1c9;
   --focus-color: #1971c2;
