feat: show invalid paths

--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -23,5 +23,7 @@
   --primary-border-color: #1c7ed6;
   --primary-border-color-active: #1767ad;
 
+  --error-color: #e04141;
+
   --focus-color: #1971c2;
 }
