--- a/src/styles/themes.scss
+++ b/src/styles/themes.scss
@@ -13,17 +13,35 @@
 }
 
 :root {
-  --background-color: #eeeeee;
-  --background-color-dark: #d4d4d4;
+  --background-color: hsl(0, 0%, 93%);
+  --background-color-dark: hsl(0, 0%, 83%);
 
-  --text-color: #222831;
-  --border-color: #ced4da;
+  --text-color: hsl(216, 18%, 16%);
+  --border-color: hsl(210, 14%, 83%);
 
-  --primary-color: #228be6;
-  --primary-border-color: #1c7ed6;
-  --primary-border-color-active: #1767ad;
+  --primary-color: hsl(208, 80%, 52%);
+  --primary-border-color: hsl(208, 77%, 47%);
+  --primary-border-color-active: hsl(208, 77%, 38%);
 
-  --error-color: #e04141;
+  --error-color: hsl(0, 72%, 57%);
 
-  --focus-color: #1971c2;
+  --focus-color: hsl(209, 77%, 43%);
+}
+
+:root {
+  body.theme-dark {
+    --background-color: hsl(216, 18%, 16%);
+    --background-color-dark: hsl(216, 18%, 6%);
+
+    --text-color: hsl(0, 0%, 93%);
+    --border-color: hsl(215, 18%, 31%);
+
+    --primary-color: hsl(208, 80%, 42%);
+    --primary-border-color: hsl(208, 77%, 37%);
+    --primary-border-color-active: hsl(208, 77%, 28%);
+
+    --error-color: hsl(0, 72%, 47%);
+
+    --focus-color: hsl(209, 77%, 43%);
+  }
 }
