feat: setup home

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,6 +5,16 @@ html * {
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
 body {
   font-family: Jost;
   background-color: var(--background-color);
