--- a/src/components/ToggleButton/ToggleButton.module.css
+++ b/src/components/ToggleButton/ToggleButton.module.css
@@ -39,4 +39,8 @@
     outline: 0.125rem solid var(--focus-color);
     outline-offset: 0.125rem;
   }
+
+  &.square {
+    max-width: var(--ui-size);
+  }
 }
