--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   gap: var(--spacing-xs);
+  position: absolute;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 0 var(--side-padding);
-  animation-duration: var(--menu-transition-duration) !important;
 }
