--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,7 +1,7 @@
 @define-mixin font $font-family, $file, $weight {
   @font-face {
     font-family: "Jost";
-    src: url("~src/assets/fonts/$(file).woff2") format("woff2");
+    src: url("/fonts/$(file).woff2") format("woff2");
     font-weight: $weight;
   }
 }
