--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -27,3 +27,21 @@
 
   --focus-color: hsl(209, 77%, 43%);
 }
+
+:root {
+  body.theme-dark {
+    --background-color: hsl(216, 18%, 16%);
+    --background-color-dark: hsl(216, 18%, 6%);
+
+    --text-color: hsl(0, 0%, 93%);
+    --border-color: hsl(215, 18%, 31%);
+
+    --primary-color: hsl(208, 80%, 42%);
+    --primary-border-color: hsl(208, 77%, 37%);
+    --primary-border-color-active: hsl(208, 77%, 28%);
+
+    --error-color: hsl(0, 72%, 47%);
+
+    --focus-color: hsl(209, 77%, 43%);
+  }
+}
