feat: node path selection

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,6 +5,7 @@
   --spacing-lg: 1.25rem;
   --spacing-xl: 2rem;
 
+  --ui-size-lg: 3.25rem;
   --ui-size: 2.5rem;
   --ui-size-sm: 1.75rem;
   --ui-width: min(18rem, 80vw);
