--- a/src/components/Screen/Screen.module.css
+++ b/src/components/Screen/Screen.module.css
@@ -2,9 +2,28 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: var(--spacing-xs);
   position: absolute;
   height: 100vh;
   width: 100%;
   padding: 0 var(--side-padding);
+
+  &.gap-xs {
+    gap: var(--spacing-xs);
+  }
+
+  &.gap-sm {
+    gap: var(--spacing-sm);
+  }
+
+  &.gap-md {
+    gap: var(--spacing-md);
+  }
+
+  &.gap-lg {
+    gap: var(--spacing-lg);
+  }
+
+  &.gap-xl {
+    gap: var(--spacing-xl);
+  }
 }
