--- a/src/features/LevelFooter/LevelFooter.module.css
+++ b/src/features/LevelFooter/LevelFooter.module.css
@@ -1,10 +1,32 @@
-.selectedValue {
-  background-color: var(--border-color);
-  align-self: center;
-  width: var(--ui-size);
-  height: var(--ui-size);
+.levelFooter {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  border-radius: 50%;
+  gap: var(--spacing-xs);
+
+  .selectedValue {
+    background-color: var(--border-color);
+    width: var(--ui-size);
+    height: var(--ui-size);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+
+  .dots {
+    display: flex;
+    gap: var(--spacing-xs);
+
+    .dot {
+      width: 0.5rem;
+      height: 0.5rem;
+      border-radius: 50%;
+      background-color: var(--border-color);
+
+      &.selected {
+        background-color: var(--primary-color);
+      }
+    }
+  }
 }
