--- a/src/features/LevelFooter/LevelFooter.module.css
+++ b/src/features/LevelFooter/LevelFooter.module.css
@@ -11,13 +11,11 @@
     align-items: center;
 
     .selectedValue {
-      background-color: var(--border-color);
       width: var(--ui-size);
       height: var(--ui-size);
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 50%;
     }
 
     .dots {
@@ -28,12 +26,23 @@
         width: 0.5rem;
         height: 0.5rem;
         border-radius: 50%;
-        background-color: var(--border-color);
-
-        &.selected {
-          background-color: var(--primary-color);
-        }
+        background-color: var(--primary-color);
       }
+    }
+  }
+
+  .paths {
+    display: flex;
+    align-items: center;
+
+    .path {
+      width: var(--ui-size);
+      height: var(--ui-size);
+      border: 0.125rem solid var(--border-color);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
     }
   }
 }
