chore: seperate active text color

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -58,7 +58,7 @@
   }
 
   &.withHoverAnimations:hover {
-    color: white;
+    color: var(--text-on-primary-color);
 
     .icon {
       left: 50%;
