feat: setup checkbox for menu transitions

--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  min-height: var(--ui-size);
+  min-height: var(--checkbox-size);
   cursor: pointer;
   user-select: none;
 
