--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -2,4 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+
+  .selected {
+    outline: none;
+  }
+
+  &:has(> .selected:focus-visible) {
+    outline: 0.125rem solid var(--focus-color);
+    outline-offset: 0.125rem;
+  }
 }
