--- a/src/features/GameBoard/GameEdge.module.css
+++ b/src/features/GameBoard/GameEdge.module.css
@@ -3,20 +3,34 @@
   display: flex;
   transform: translate(-50%, -50%);
   user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+
+  &[data-selected="true"] {
+    background-color: var(--primary-color);
+    color: var(--text-on-primary-color);
+  }
 
   &[data-orientation="horizontal"] {
+    width: calc(var(--node-size) + var(--node-gap));
+    height: var(--node-size);
+    left: calc(
+      var(--node-size) + var(--node-gap) / 2 + var(--column) *
+        (var(--node-gap) + var(--node-size))
+    );
     top: calc(
       var(--node-size) / 2 + var(--row) * (var(--node-gap) + var(--node-size))
-    );
-    left: calc(
-      var(--node-size) + (var(--node-gap) / 2) + var(--column) *
-        (var(--node-gap) + var(--node-size))
     );
   }
 
   &[data-orientation="vertical"] {
+    width: var(--node-size);
+    height: calc(var(--node-size) + var(--node-gap));
+
     top: calc(
-      var(--node-size) + (var(--node-gap) / 2) + var(--row) *
+      var(--node-size) + var(--node-gap) / 2 + var(--row) *
         (var(--node-gap) + var(--node-size))
     );
     left: calc(
