--- a/src/features/Objectives/Objectives.module.css
+++ b/src/features/Objectives/Objectives.module.css
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    user-select: none;
 
     svg {
       height: 130%;
