--- a/src/features/SelectedInfo/SelectedInfo.module.css
+++ b/src/features/SelectedInfo/SelectedInfo.module.css
@@ -6,6 +6,7 @@
   .value {
     transform: scale(1.5);
     animation: value var(--anim-duration) var(--anim-easing) forwards;
+    user-select: none;
 
     @keyframes value {
       0% {
