--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,90 +1,34 @@
 @import "../../styles/mixins.css";
 
 .button {
-  --background-z-index: 1;
-  --hover-anim-z-index: 2;
-  --content-z-index: 3;
-
   border: none;
   outline: none;
-  background-color: var(--border-color);
+  background-color: var(--background-color);
+  border: 0.125rem solid var(--border-color);
   cursor: pointer;
   min-height: var(--ui-size);
-  position: relative;
   display: flex;
   align-items: center;
-
-  .icon {
-    position: absolute;
-    left: var(--spacing-xs);
-    transition: left var(--anim-duration) var(--anim-easing);
-    z-index: var(--content-z-index);
-    display: flex;
-  }
-
-  .text {
-    position: absolute;
-    left: calc(var(--spacing-xs) + 2rem);
-    transition: left var(--anim-duration) var(--anim-easing),
-      opacity calc(var(--anim-duration) / 2) var(--anim-easing);
-    z-index: var(--content-z-index);
-    display: flex;
-    align-items: center;
-  }
+  gap: var(--spacing-xs);
 
   &[data-icon="false"] {
     justify-content: center;
-    .text {
-      position: unset;
-    }
   }
 
-  .bg {
-    position: absolute;
-    background-color: var(--background-color);
-    inset: 0.125rem;
-    z-index: var(--background-z-index);
-  }
-
-  .hoverAnim {
-    position: absolute;
-    background-color: var(--primary-color);
-    border: 0.125rem solid var(--primary-border-color);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 100%;
-    visibility: hidden;
-    transition: right var(--anim-duration) var(--anim-easing);
-    z-index: var(--hover-anim-z-index);
+  .content {
+    display: flex;
+    align-items: center;
   }
 
   @mixin hoverAnimations {
     &:not([disabled]):hover {
       color: var(--text-on-primary-color);
-
-      .icon {
-        left: 50%;
-        transform: translateX(-50%);
-      }
-
-      &[data-icon="true"] .text {
-        left: calc(50% + var(--spacing-xs) + 2rem);
-        transform: translateX(-50%);
-        opacity: 0;
-      }
-
-      .hoverAnim {
-        right: 0;
-        visibility: visible;
-      }
+      background-color: var(--primary-color);
+      border-color: var(--primary-border-color);
     }
-
-    &:active {
-      .hoverAnim {
-        background-color: var(--primary-border-color);
-        border-color: var(--primary-border-color-active);
-      }
+    &:not([disabled]):active {
+      border-color: var(--primary-border-color-active);
+      background-color: var(--primary-border-color);
     }
   }
 
@@ -100,9 +44,6 @@
 
   &[disabled] {
     cursor: not-allowed;
-
-    .bg {
-      background-color: var(--border-color);
-    }
+    background-color: var(--border-color);
   }
 }
