feat: only show selected value if it is set

--- a/src/features/SelectedInfo/SelectedInfo.module.css
+++ b/src/features/SelectedInfo/SelectedInfo.module.css
@@ -3,6 +3,10 @@
   align-items: center;
   justify-content: space-between;
 
+  &[data-hidden="true"] {
+    visibility: hidden;
+  }
+
   .value {
     transform: scale(1.5);
     animation: value var(--anim-duration) var(--anim-easing) forwards;
