feat: prepare hints

--- a/src/features/GameButtons/GameButtons.module.css
+++ b/src/features/GameButtons/GameButtons.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
 
-  .levelControls {
+  > div {
     display: flex;
     gap: var(--spacing-xs);
   }
