--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,6 +20,7 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
   font-size: 16px;
+  line-height: 24px;
   overflow: hidden;
   touch-action: none;
 }
