--- a/src/components/ToggleInput/ToggleInput.module.css
+++ b/src/components/ToggleInput/ToggleInput.module.css
@@ -28,7 +28,8 @@
   .toggleButton {
     border: 0.125rem solid var(--border-color);
     outline: none;
-    background-color: var(--bg-color);
+    background-color: var(--background-color);
+    color: var(--text-color);
     cursor: pointer;
     position: relative;
     display: flex;
@@ -50,6 +51,7 @@
       &:active {
         border-color: var(--primary-border-color);
         background-color: var(--background-color-dark);
+        transform: translateY(var(--active-press));
       }
 
       &[data-active="true"]:hover {
